Corrected alignment issue on hole nav

--- a/scss/hole.scss
+++ b/scss/hole.scss
@@ -58,6 +58,7 @@ body .hole-user-list {
 	display: table-cell;
 	width: 50%;
 	text-align: center;
+	vertical-align: top;
 	padding: 0;
 
 	&:first-child {
